--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,18 @@
     "dev": "cross-env NODE_ENV=development nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "morgan": "~1.9.1",
-    "bcrypt": "^5.1.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "express-validator": "^7.0.1"
-    
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
